adding mysql client

--- a/docker/images/php-apache/Dockerfile
+++ b/docker/images/php-apache/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
         libjpeg62-turbo-dev \
         libpng-dev \
         libyaml-dev \
+        mysql-client \
         && docker-php-ext-install mysqli \
         && docker-php-ext-install pdo_mysql \
         && docker-php-ext-install zip \
