Updating ssh-selenium docker file

--- a/docker/images/ssh-selenium-standalone-chrome/Dockerfile
+++ b/docker/images/ssh-selenium-standalone-chrome/Dockerfile
@@ -4,12 +4,12 @@ RUN sudo apt-get -y update && sudo apt-get install -y openssh-server
 
 USER root
 
+RUN passwd -d root
+
 COPY entry_point.sh /opt/bin/entry_point.sh
 
 RUN chmod +x /opt/bin/entry_point.sh
 
 ENTRYPOINT /opt/bin/entry_point.sh
-
-USER seluser
 
 EXPOSE 22
