--- a/docker/images/ssh-selenium-standalone-chrome/Dockerfile
+++ b/docker/images/ssh-selenium-standalone-chrome/Dockerfile
@@ -4,7 +4,9 @@ RUN sudo apt-get -y update && sudo apt-get install -y openssh-server
 
 USER root
 
-RUN passwd -d root
+RUN passwd -d root \
+    && sed -i '/PermitRootLogin prohibit-password/c\PermitRootLogin yes' /etc/ssh/sshd_config \
+    && service ssh restart
 
 COPY entry_point.sh /opt/bin/entry_point.sh
 
