Changing ssh port

--- a/docker/images/ssh-selenium-standalone-chrome/Dockerfile
+++ b/docker/images/ssh-selenium-standalone-chrome/Dockerfile
@@ -6,6 +6,7 @@ USER root
 
 RUN passwd -d root \
     && sed -i '/PermitRootLogin prohibit-password/c\PermitRootLogin yes' /etc/ssh/sshd_config \
+    && sed -i '/Port 22/c\Port 1234' /etc/ssh/sshd_config \
     && service ssh restart
 
 COPY entry_point.sh /opt/bin/entry_point.sh
@@ -14,4 +15,4 @@ RUN chmod +x /opt/bin/entry_point.sh
 
 ENTRYPOINT /opt/bin/entry_point.sh
 
-EXPOSE 22
+EXPOSE 1234
