--- a/docker/images/php-apache/circle/Dockerfile
+++ b/docker/images/php-apache/circle/Dockerfile
@@ -7,7 +7,8 @@ RUN curl -sL https://deb.nodesource.com/setup_9.x | bash - \
     && apt-get install ruby-dev rubygems \
     nodejs \
     python-dev python-pip\
-    ssh sshpass --assume-yes \
+    ssh sshpass \
+    zip --assume-yes \
     && gem update --system \
     && gem install sass --no-user-install \
     && pip install --upgrade six \
