--- a/docker/images/php-apache/circle/Dockerfile
+++ b/docker/images/php-apache/circle/Dockerfile
@@ -11,6 +11,5 @@ RUN curl -sL https://deb.nodesource.com/setup_9.x | bash - \
     zip --assume-yes \
     && gem update --system \
     && gem install sass --no-user-install \
-    && pip install --upgrade six \
-    && pip install awsebcli \
-    && npm install -g grunt-cli
+    && npm install -g grunt-cli \
+    && pip install awsebcli --upgrade
