--- a/docker/images/php-apache/circle/Dockerfile
+++ b/docker/images/php-apache/circle/Dockerfile
@@ -2,9 +2,11 @@ FROM talentify/php-apache
 LABEL version="0.1.0"
 LABEL description="Image for CI on Flux application."
 
+#precisa do git pra o cli da amazon poder fazer o deploy
 RUN curl -sL https://deb.nodesource.com/setup_9.x | bash - \
     && apt-get update  \
     && apt-get install ruby-dev rubygems \
+    git \
     nodejs \
     python-dev python-pip\
     ssh sshpass \
