adds dockerize to circle image

--- a/docker/images/php-apache/circle/Dockerfile
+++ b/docker/images/php-apache/circle/Dockerfile
@@ -14,4 +14,7 @@ RUN curl -sL https://deb.nodesource.com/setup_9.x | bash - \
     && gem update --system \
     && gem install sass --no-user-install \
     && npm install -g grunt-cli \
-    && pip install awsebcli --upgrade
+    && pip install awsebcli --upgrade \
+    && curl -sOL https://github.com/jwilder/dockerize/releases/download/v0.6.0/dockerize-linux-amd64-v0.6.0.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-v0.6.0.tar.gz \
+    && rm dockerize-linux-amd64-v0.6.0.tar.gz
