--- a/docker/images/php-apache/base/Dockerfile
+++ b/docker/images/php-apache/base/Dockerfile
@@ -12,12 +12,14 @@ RUN apt-get update && apt-get install -y \
         libyaml-dev \
         mysql-client \
         ssl-cert \
+        libxml2-dev \
         && docker-php-ext-install mysqli \
         && docker-php-ext-install pdo_mysql \
         && docker-php-ext-install zip \
         && docker-php-ext-install mbstring \
         && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
         && docker-php-ext-install -j$(nproc) gd \
+        && docker-php-ext-install soap \
         && pecl install redis \
         && pecl install yaml \
         && pecl install mailparse \
