--- a/docker/images/php-apache/dev/xdebug.ini
+++ b/docker/images/php-apache/dev/xdebug.ini
@@ -32,5 +32,5 @@ xdebug.var_display_max_children=-1
 xdebug.var_display_max_data=-1
 # Controls how many nested levels of array elements and object properties
 # are when variables are displayed
-xdebug.var_display_max_depth=-1
+xdebug.var_display_max_depth=5
 
