--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command:  |
               apt-get update &&
               apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common &&
-              curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add - &&
+              curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - &&
               add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" &&
               apt-get update &&
               apt-get install docker-ce &&
