--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
               curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - &&
               add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" &&
               apt-get update &&
-              apt-get install docker-ce &&
+              apt-get install -y docker-ce &&
               curl -L https://github.com/docker/compose/releases/download/1.21.0/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose &&
               chmod +x /usr/local/bin/docker-compose
       - run:
