--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,13 @@ jobs:
   build:
     working_directory: ~/repo
     docker:
-      - image: debian:buster
+      - image: docker:stable-git
     steps:
       - checkout
+      - setup_remote_docker
       - run:
-          name: Install docker and docker-compose
+          name: Install docker-compose
           command:  |
-              apt-get update &&
-              apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common &&
-              curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - &&
-              add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" &&
-              apt-get update &&
-              apt-get install -y docker-ce &&
               curl -L https://github.com/docker/compose/releases/download/1.21.0/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose &&
               chmod +x /usr/local/bin/docker-compose
       - run:
