--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,11 @@ jobs:
       - setup_remote_docker
       - run:
           name: Install dependencies
-          command: |
-            apk add --no-cache py-pip=9.0.0-r1 &&
-            pip install docker-compose==1.12.0
+          command:  |
+               apk add --no-cache \
+                 py-pip=9.0.0-r1
+               pip install \
+                 docker-compose==1.12.0 \
       - run:
           name: Build application Docker image
           command: docker-compose build
