--- a/docker/images/php-apache/base/sites-enable/ssl.conf
+++ b/docker/images/php-apache/base/sites-enable/ssl.conf
@@ -2,7 +2,7 @@
 	<VirtualHost _default_:443>
 		ServerAdmin goku@sky
 
-		DocumentRoot /var/www/html
+		DocumentRoot /var/www/public
 
 		LogLevel warn
 
