changes transpiler to gulp

--- a/docker/images/utils/Dockerfile
+++ b/docker/images/utils/Dockerfile
@@ -1,13 +1,11 @@
 FROM node:9-stretch
 LABEL version="0.1.1"
-LABEL description="TalentFlux image to transpile assets and deploy the project."
+LABEL description="TalentFlux image to transpile assets.1"
 
 RUN apt-get update  \
-    && apt-get install ruby-dev rubygems \
-    python-dev python-pip --assume-yes \
+    && apt-get install ruby-dev rubygems --assume-yes \
     && gem update --system \
-    && gem install sass --no-user-install \
-    && pip install awsebcli
+    && gem install sass --no-user-install
 
 COPY start.sh /usr/local/bin/start.sh
 
