Add RabbitMQ extesion for PHP

--- a/docker/images/php-apache/base/Dockerfile
+++ b/docker/images/php-apache/base/Dockerfile
@@ -1,9 +1,11 @@
 FROM php:7.1-apache
-LABEL version="0.3.0"
+LABEL version="0.4.0"
 LABEL description="Image for Flux application."
 
 ENV PHALCON_VERSION=3.3.2
 
+# RabbitMQ/amqp extension needs librabbitmq-dev and libssh-dev apt packages.
+# Source: https://github.com/php-amqplib/php-amqplib/issues/521#issuecomment-357807290
 RUN apt-get update && apt-get install -y \
         libcurl3 \
         libfreetype6-dev \
@@ -13,17 +15,23 @@ RUN apt-get update && apt-get install -y \
         mysql-client \
         ssl-cert \
         libxml2-dev \
-        && docker-php-ext-install mysqli \
-        && docker-php-ext-install pdo_mysql \
-        && docker-php-ext-install zip \
-        && docker-php-ext-install mbstring \
+        librabbitmq-dev \
+        libssh-dev \
         && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
         && docker-php-ext-install -j$(nproc) gd \
-        && docker-php-ext-install soap \
+        && docker-php-ext-install mysqli \
+        pdo_mysql \
+        zip \
+        mbstring \
+        soap \
         && pecl install redis \
-        && pecl install yaml \
-        && pecl install mailparse \
-        && docker-php-ext-enable redis yaml mailparse
+        yaml \
+        mailparse \
+        amqp \
+        && docker-php-ext-enable redis \
+        yaml \
+        mailparse \
+        amqp
 
 RUN cd /usr/src \
         && curl -sSL "https://codeload.github.com/phalcon/cphalcon/tar.gz/v${PHALCON_VERSION}" | tar -xz \
