Increase PHP memory limit

--- a/docker/images/flux/dev/Dockerfile
+++ b/docker/images/flux/dev/Dockerfile
@@ -8,8 +8,10 @@ RUN set -eux; \
 	rm -rf /var/lib/apt/lists/*
 
 # Configure PHP
+COPY ./talentify.ini /tmp
 RUN mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini" &&\
-    pecl config-set php_ini "$PHP_INI_DIR/php.ini"
+    pecl config-set php_ini "$PHP_INI_DIR/php.ini" &&\
+    mv /tmp/talentify.ini "$PHP_INI_DIR/conf.d"
 # Install xdebug and append our configuration within .ini file
 # that usually contains only the instruction to load the extension.
 COPY xdebug.ini /tmp
