--- a/docker/images/flux/base/Dockerfile
+++ b/docker/images/flux/base/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get update && apt-get install -y \
         && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
         && docker-php-ext-install -j$(nproc) gd \
         && docker-php-ext-install mysqli \
+        && docker-php-ext-install pcntl \
         pdo_mysql \
         soap \
         && pecl install redis \
