fixes error_reporting level

--- a/docker/images/flux/dev/talentify.ini
+++ b/docker/images/flux/dev/talentify.ini
@@ -3,3 +3,5 @@
 ; Maximum amount of memory a script may consume
 ; http://php.net/memory-limit
 memory_limit = 512M
+
+error_reporting = E_ALL & ~E_DEPRECATED
