--- a/docker/images/ci/Dockerfile
+++ b/docker/images/ci/Dockerfile
@@ -20,6 +20,14 @@ RUN apt-get install ruby-dev rubygems \
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-v0.6.1.tar.gz \
     && rm dockerize-linux-amd64-v0.6.1.tar.gz
 
+# Install xdebug and append our configuration within .ini file
+# that usually contains only the instruction to load the extension.
+COPY xdebug.ini /tmp
+RUN pecl install xdebug-2.6.0 \
+        && docker-php-ext-enable xdebug \
+        && cat /tmp/xdebug.ini | grep -v '^#' >> "$PHP_INI_DIR/conf.d/docker-php-ext-xdebug.ini" \
+        && rm /tmp/xdebug.ini
+
 # Add composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 RUN composer global require hirak/prestissimo
