feature: add bcmath extension and unzip command

--- a/docker/images/flux/dev/Dockerfile
+++ b/docker/images/flux/dev/Dockerfile
@@ -4,8 +4,10 @@ LABEL description="Image for development on Flux application."
 # Install git in order to allow composer to clone talentify/ repositories.
 RUN set -eux; \
 	apt-get update; \
-	apt-get install -y git; \
-	rm -rf /var/lib/apt/lists/*
+	apt-get install -y \
+	git \
+	unzip \
+	&& rm -rf /var/lib/apt/lists/*
 
 # Configure PHP
 COPY ./talentify.ini /tmp
