--- a/docker/images/flux/base/Dockerfile
+++ b/docker/images/flux/base/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get update && apt-get install -y \
         && docker-php-ext-install -j$(nproc) gd \
         && docker-php-ext-install mysqli \
         && docker-php-ext-install pcntl \
+        && docker-php-ext-install bcmath \
         pdo_mysql \
         soap \
         && pecl install redis \
