--- a/docker/images/flux/base/sites-enable/000-default.conf
+++ b/docker/images/flux/base/sites-enable/000-default.conf
@@ -1,3 +1,33 @@
 <VirtualHost *:80>
     DocumentRoot /var/www/public
 </VirtualHost>
+
+# This prevents the proxy from truncating POST bodies
+SetEnv proxy-sendcl
+
+# Main application proxy
+<LocationMatch "/client/v2">
+    ProxyPass http://front:8080/client/v2
+    ProxyPassReverse http://front:8080/client/v2
+</LocationMatch>
+
+# Live reload proxy for http and ws requests
+<LocationMatch "/sockjs-node">
+    RewriteEngine on
+    RewriteCond %{HTTP:Upgrade} websocket [NC]
+    RewriteCond %{HTTP:Connection} upgrade [NC]
+    RewriteRule .* "ws://front:8080%{REQUEST_URI}" [P]
+    ProxyPass http://front:8080/
+    ProxyPassReverse http://front:8080/
+    AllowMethods GET PUT DELETE POST
+</LocationMatch>
+
+# This is to prevent apache from proxying some requets
+<Proxy "*">
+    Order deny,allow
+    Allow from all
+    AllowMethods GET PUT DELETE POST
+</Proxy>
+
+# Proxes hot-reload js snippets
+ProxyPassMatch "^/(.*hot-update.*)$" "http://front:8080/$1"
