fix: add trailing slash to ProxyPass

--- a/docker/images/flux/base/sites-enable/000-default.conf
+++ b/docker/images/flux/base/sites-enable/000-default.conf
@@ -7,8 +7,8 @@ SetEnv proxy-sendcl
 
 # Main application proxy
 <LocationMatch "/client/v2">
-    ProxyPass http://front:8080/client/v2
-    ProxyPassReverse http://front:8080/client/v2
+    ProxyPass http://front:8080/client/v2/
+    ProxyPassReverse http://front:8080/client/v2/
 </LocationMatch>
 
 # Live reload proxy for http and ws requests
