--- a/docker/images/flux/dev/talentify.ini
+++ b/docker/images/flux/dev/talentify.ini
@@ -4,4 +4,12 @@
 ; http://php.net/memory-limit
 memory_limit = 512M
 
+upload_max_filesize = 512M
+
+post_max_size = 512M
+
+max_input_time = -1
+
+max_execution_time = 0
+
 error_reporting = E_ALL & ~E_DEPRECATED
