update php + phalcon + xdebug

--- a/docker/images/ci/Dockerfile
+++ b/docker/images/ci/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get install ruby-dev rubygems \
     git \
     nodejs \
     yarn \
-    python-dev python-pip\
+    python3-dev python3-pip\
     ssh sshpass \
     zip --assume-yes \
     && gem update --system \
@@ -27,7 +27,7 @@ RUN apt-get install ruby-dev rubygems \
 # Install xdebug and append our configuration within .ini file
 # that usually contains only the instruction to load the extension.
 COPY xdebug.ini /tmp
-RUN pecl install xdebug-2.6.0 \
+RUN pecl install xdebug-2.9.7 \
         && docker-php-ext-enable xdebug \
         && cat /tmp/xdebug.ini | grep -v '^#' >> "$PHP_INI_DIR/conf.d/docker-php-ext-xdebug.ini" \
         && rm /tmp/xdebug.ini
