--- a/docker/images/ci/Dockerfile
+++ b/docker/images/ci/Dockerfile
@@ -33,5 +33,4 @@ RUN pecl install xdebug-2.9.7 \
         && rm /tmp/xdebug.ini
 
 # Add composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-RUN composer global require hirak/prestissimo
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
