--- a/docker/images/flux/base/Dockerfile
+++ b/docker/images/flux/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM talentify/phalcon-framework:3.4-php-7.3-apache-buster
+FROM talentify/phalcon-framework:4.1-php-7.4-apache-bullseye
 LABEL description="Base image for Flux application."
 
 # Install dependencies
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
         libxml2-dev \
         librabbitmq-dev \
         libssh-dev \
-        && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+        && docker-php-ext-configure gd --with-freetype --with-jpeg \
         && docker-php-ext-install -j$(nproc) gd \
         && docker-php-ext-install mysqli \
         && docker-php-ext-install pcntl \
