--- a/docker/images/ci/Dockerfile
+++ b/docker/images/ci/Dockerfile
@@ -1,4 +1,4 @@
-FROM talentify/flux:base
+FROM talentify/flux:base-phalcon41
 LABEL description="Image for Flux's continuous integration."
 
 RUN apt-get update \
@@ -16,11 +16,14 @@ RUN apt-get install ruby-dev rubygems \
     yarn \
     python3-dev python3-pip\
     ssh sshpass \
-    zip --assume-yes \
-    && gem install sass --no-user-install \
-    && npm install -g grunt-cli \
-    && pip3 install awsebcli --upgrade \
-    && curl -sOL https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz \
+    zip --assume-yes
+
+RUN gem install sass --no-user-install \
+    && npm install -g grunt-cli
+
+RUN pip3 install awsebcli --upgrade
+
+RUN curl -sOL https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz \
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-v0.6.1.tar.gz \
     && rm dockerize-linux-amd64-v0.6.1.tar.gz
 
